--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
       <option value=".10">10%</option>  
     </select> 
   </div>
-  <script type="text/javascript" src="jquery-1.3.2.js"></script>
-  <script type="text/javascript" src="raphael.js"></script>
-  <script type="text/javascript" src="editor.js"></script>
-  <script type="text/javascript" src="shape.js"></script>
-  <script type="text/javascript" src="tracker.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+  <script type="text/javascript" src="https://github.com/DmitryBaranovskiy/raphael/raw/2.0/raphael.js"></script>
+  <script type="text/javascript" src="https://github.com/rileydutton/jsVectorEditor-Raphael-2.0/raw/master/editor.js"></script>
+  <script type="text/javascript" src="https://github.com/rileydutton/jsVectorEditor-Raphael-2.0/raw/master/shape.js"></script>
+  <script type="text/javascript" src="https://github.com/rileydutton/jsVectorEditor-Raphael-2.0/raw/master/tracker.js"></script>
   <script type="text/javascript">
   
   function setMode(mode){
